--- a/css/style.css
+++ b/css/style.css
@@ -1,101 +1,177 @@
- .navbar-default,
- .navbar-toggle {
-     background-color: #ADADAD !important;
- }
- 
- span.icon-bar {
-     background-color: #fff !important;
- }
- 
- a.mybrand {
-     color: #000 !important;
-     font-size: bold;
- }
- 
- a:hover.myb-1 {
-     color: #FF9C1A !important;
- }
- 
- .mymenu li a {
-     color: #000 !important;
- }
- 
- h1 {
-     text-align: center;
-     margin-top: 20px;
- }
- 
- h3 {
-     text-align: center;
-     margin-top: 0px;
- }
- 
- .bg-1 {
-     background-color: #ADADAD;
-     color: #000;
-     width: 100%;
-     padding: 20px;
- }
- 
- .bg-2 {
-     background-color: #3E3E3E;
-     color: #fff;
-     text-align: center;
-     width: 100%;
-     margin-top: 30px;
-     padding: 30px;
- }
- 
- .logo-u {
-     width: 160px;
-     border: none;
-     margin-right: 10px;
- }
- 
- .logo-c {
-     width: 120px;
-     border: none;
-     margin-top: 15px;
- }
- 
- .navbar {
-     padding-top: 15px;
-     padding-bottom: 15px;
-     border: 0;
-     border-radius: 0;
-     margin-bottom: 0;
- }
- 
- .navbar-nav li a:hover {
-     color: #FF9C1A !important;
- }
- 
- footer a:hover {
-     color: #FF9C1A !important;
- }
- 
- .hover-f:hover {
-     color: #fff !important;
-     background-color: #343232!important;
- }
- /********** Small devices only **********/
- 
- @media screen and (max-width: 768px) {
-     .bg-1 {
-         margin-top: 20px;
-     }
- }
- /********** Medium devices only **********/
- 
- @media screen and (max-width: 992px) {
-     .bg-1 {
-         margin-top: 20px;
-     }
- }
- /********** Large devices only **********/
- 
- @media screen and (max-width: 1200px) {
-     .bg-1 {
-         margin-top: 20px;
-     }
- }
+ html {
+    font-family: sans-serif;
+}
+
+.navbar-default,
+.navbar-toggle {
+    background-color: #ADADAD !important;
+}
+
+span.icon-bar {
+    background-color: #fff !important;
+}
+
+a.mybrand {
+    color: #000 !important;
+}
+
+a:hover.myb-1 {
+    color: #FF9C1A !important;
+}
+
+.mymenu li a {
+    color: #000 !important;
+}
+
+h1 {
+    margin-top: 20px;
+}
+
+h3 {
+    text-align: center;
+    margin-top: 0px;
+}
+
+.bg-1 {
+    background-color: #ADADAD;
+    color: #000;
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+
+.bg-2 {
+    margin-top: 30px;
+    padding: 30px;
+    margin-bottom: 70px;
+}
+
+.bg-3 {
+    background-color: #3E3E3E;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    margin-top: 30px;
+    padding: 30px;
+}
+
+.img-s img {
+    width: 260px;
+    margin-bottom: 5px;
+}
+
+.content {
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+.logo-u {
+    width: 160px;
+    border: none;
+    margin-right: 10px;
+}
+
+.logo-c {
+    width: 120px;
+    border: none;
+    margin-top: 15px;
+}
+
+.navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+}
+
+.navbar-nav li a:hover {
+    color: #FF9C1A !important;
+}
+
+footer a:hover {
+    color: #FF9C1A !important;
+}
+
+.hover-f:hover {
+    color: #fff !important;
+    background-color: #343232!important;
+}
+
+li {
+    display: inline-block;
+}
+
+a {
+    text-decoration: none;
+}
+
+.fa {
+    color: #C0C0C0;
+    width: 40px;
+    line-height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    margin-top: 10px;
+}
+
+.fa:hover {
+    text-decoration: none;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.fa-github:hover {
+    color: #070709;
+    background-color: #fff;
+}
+
+.fa-css3:hover {
+    color: #1572B7;
+    background-color: #fff;
+}
+
+.fa-html5:hover {
+    color: #E54D26;
+    background-color: #fff;
+}
+
+@font-face {
+    font-family: 'glyphicon-chevron-up';
+    src: url('../fonts/glyphicons-halfing-regular.ttf') format('truetype');
+}
+
+.glyphicon-chevron-up a:hover {
+    color: #FF9C1A;
+}
+
+
+/********** Small devices only **********/
+
+@media screen and (max-width: 768px) {
+    .bg-1 {
+        margin-top: 80px;
+    }
+}
+
+
+/********** Medium devices only **********/
+
+@media screen and (max-width: 992px) {
+    .bg-1 {
+        margin-top: 80px;
+    }
+}
+
+
+/********** Large devices only **********/
+
+@media screen and (max-width: 1200px) {
+    .bg-1 {
+        margin-top: 80px;
+        margin-bottom: 20px;
+    }
+}
