--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
- html {
+html {
     font-family: sans-serif;
 }
 
@@ -60,6 +60,10 @@ h3 {
     margin-bottom: 5px;
 }
 
+.myimg img {
+    margin-right: 5px;
+}
+
 .content {
     font-size: 36px;
     font-weight: bolder;
@@ -96,47 +100,6 @@ footer a:hover {
 .hover-f:hover {
     color: #fff !important;
     background-color: #343232!important;
-}
-
-li {
-    display: inline-block;
-}
-
-a {
-    text-decoration: none;
-}
-
-.fa {
-    color: #C0C0C0;
-    width: 40px;
-    line-height: 40px;
-    margin-left: 5px;
-    margin-right: 30px;
-    margin-top: 10px;
-}
-
-.fa:hover {
-    text-decoration: none;
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
-.fa-github:hover {
-    color: #070709;
-    background-color: #fff;
-}
-
-.fa-css3:hover {
-    color: #1572B7;
-    background-color: #fff;
-}
-
-.fa-html5:hover {
-    color: #E54D26;
-    background-color: #fff;
 }
 
 @font-face {
